Changelog for JErgometer
""""""""""""""""""""""""

== Coming 0.7.13 ==

2012-03-11
* [stefan]  * fixed bug #274: get rid of the error message "ResourceManager : unable to find resource 'org/jergometer/gui/templates/default_de.vm' in any resource loader."
            * fixed bug #275: exception when opening settings dialog
            * fixed bug #276: pulse, power, pedalRPM, ... information flickers sometimes when updated

2012-03-10
* [stefan]  * implemented issue #273: provide alternative to buggy RXTX library (socat)

== 0.7.12 ==

2011-04-26
* [stefan]  * fixed popup menu of program tree
            * added menu icons (tanks to Tango Desktop Project)

2011-04-09
* [stefan]  * fixed bug #182: JErgometer wants to update even if it's a bleeding edge version
            * implemented issue #247: display error message when JErgometer is started without RXTX library
            * implemented issue #252: rename all occurrences of "COM port" to "serial port"
            * implemented issue #253: allow to switch between kJ and kcal
            * improved start scripts (manuel update needed under Windows)

== 0.7.11 ==

2011-04-07
* [stefan]  * fixed bug #249: incorrect distance and speed displayed (has to be devided by 10)
            * implemented issue #167: mark real pulse red when pulse information is missing
            * implemented issue #250: display units for distance, speed, power, ...
            * implemented issue #251: select last training program after start

2010-09-05
* [stefan]  * fixed bug #198: "Waiting auf Reset-Ende" needs to be translated completely

2010-04-06
* [stefan]  * applied patch from Benedikt Heinen to fix 32 bit issue on MacOS X

== 0.7.10 ==

* skipped :)

== 0.7.9 ==

2010-02-28
* [stefan]  * towards feature #168: pulse after session can be recorded

2010-02-23
* [stefan]  * implemented feature #177: extend timeline automatically when reaching end of training program