@@ -1,4 +1,5 @@
 #* @vtlvariable name="bgColor" type="java.lang.String" *###
+#* @vtlvariable name="programAction" type="java.lang.String" *###
 #* @vtlvariable name="timeString" type="java.lang.String" *###
 #* @vtlvariable name="destPower" type="int" *###
 #* @vtlvariable name="destPowerString" type="java.lang.String" *###
@@ -16,6 +17,11 @@
 #* @vtlvariable name="energyString" type="java.lang.String" *###
 <html>
 <body bgcolor="#$bgColor" style="font-weight:bold">
+<div style="width: 100%; text-align: center">
+	Programm:<br/>
+	$programAction
+	<hr/>
+</div>
 <table cellpadding="5">
 	<tr><td>Zeit: </td><td>$timeString</td></tr>
 	<tr><td>Leistungsziel: </td><td>$destPowerString</td></tr>
