@@ -148,3 +148,6 @@ legend.pulse-dest=Dest. Pulse
 legend.pedalRPM-dest=Dest. Pedal RPM
 legend.power-dest=Dest. Power
 legend.performance-dest=Dest. Performance
+action.keep_power_at_x=keeps power at %d W
+action.keep_pulse_at_x=keeps pulse at %d
+action.recording_pulse=records pulse
