@@ -169,3 +169,6 @@ legend.pulse-dest=Ziel-Puls
 legend.pedalRPM-dest=Ziel-Pedalumdr.
 legend.power-dest=Ziel-Leistung
 legend.performance-dest=Ziel-Performance
+action.keep_power_at_x=hält Leistung bei %d W
+action.keep_pulse_at_x=hält Puls bei %d
+action.recording_pulse=zeichnet Puls auf
